# interval-training

./: README.md  pyproject.toml
interval_training/: chord3.py  interval.py  lib.py  main.py  triad.py
tests/: test_chord3.py  test_intervals.py  test_lib.py  test_main.py  test_triad.py
