[tool.poetry]
name = "interval-training"
version = "1.2.0"
description = "A simple tool to practice music interval memorization"
authors = ["Santolo Tubelli <tubelli.santolo@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"

[tool.poetry.scripts]
interval-training = "interval_training.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
